Barra de nagevacao e first page oks, imagens adicionadas

--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/style.css" />
     <title>NBNK Advogados</title>
   </head>
   <body>
+    <!-- NAVBAR -->
     <div class="navbar">
-      <img src="" alt="logo" />
-      <ul class="nav">
-        <li><a href="">Início</a></li>
-        <li><a href="">Áreas de Atuação</a></li>
-        <li><a href="">Equipe</a></li>
-        <li><a href="">Contato</a></li>
-      </ul>
-      <button>Novidades</button>
+      <img src="./IMG/LOGO-NBNK-BLACK.png" alt="logo" />
+      <div class="nav">
+        <a href="">Início</a>
+        <a href="">Áreas de Atuação</a>
+        <a href="">Equipe</a>
+        <a href="">Contato</a>
+      </div>
+      <a class="botao_navbar">Novidades</a class="botao_navbar">
     </div>
+    <!-- PRIMEIRA PÁGINA -->
     <div class="first-page">
       <div class="description">
-        <h1>Conheça nossas áreas de atuação.</h1>
-        <button>Ver áreas de atuação</button>
+        <h1>Conheça nossas áreas de atuação:</h1>
+        <a>Ver áreas de atuação</a>
       </div>
-      <img src="" alt="fotos" />
+      <img src="./IMG/Sala_Asterio.jpg" alt="fotos" />
     </div>
+    <!-- SEGUNDA PAGINA -->
     <div class="second-page">
       <img src="" alt="foto" />
       <div class="experience">
@@ -36,12 +40,13 @@
         </p>
       </div>
     </div>
+    <!-- PAGINA DO MEIO -->
     <div class="mid-page">
       <h6>Carreira</h6>
       <h2>Faça parte da nossa equipe</h2>
       <button>Enviar currículo</button>
     </div>
-    
+    <!-- CONTEINER DE ATUACAO -->
     <div class="conteiner_atuacao">
       <div class="titulos_atuacao">
         <h2>EXPERTIZE</h2>
@@ -95,7 +100,7 @@
         <p>• Assessoria em licitações promovidas pela indústria de petróleo e gás e por seus fornecedores.</p>
       </div>
     </div>
-
+    <!-- CONTEINER SOCIOS -->
     <div class="conteiner_socios">
       <h1>Nossa Equipe</h1>
       <button>VER TODA EQUIPE</button>
@@ -151,6 +156,7 @@
           <p>• Idiomas: Inglês e Espanhol.</p>
         </div>
     </div>
+    <!-- CONTEINER NEWSLETTER -->
     <div class="_conteiner_newsletter">
         <h2>CADASTRE-SE E RECEBAS NOVIDADES E INFORMAÇÕES ÚTEIS</h2>
         <h1>NEWSLETTER</h1>
@@ -159,13 +165,14 @@
         <!-- inserir caixa de mensagem de concordância de recebimento de emails -->
         <p>Eu concordo e entendo que estou disponibilizando informações para recebimento de conteúdo por e-mail.</p>
     </div>
+    <!-- CONTEINER BLOG -->
     <div class="conteiner_blog">
       <h2>BLOG</h2>
       <h1>Novidades Diárias</h1>
       <p>Veja as principais notícias e artigos jurídicos.</p>
       <button>ACESSAR BLOG</button>
     </div>
-    
+    <!-- FOOTER -->
     <footer>
       <img src="" alt="">
       <p>Copyright © 2020 | All Rights Reserved | Sync WEB</p>
